# KingfisherRebuild

./: .gitignore  OLD_CODE_REVIEW.md  README.md  nano_image_build.sh
ControlBoard/ControlBoard/: ControlBoard.kicad_prl  ControlBoard.kicad_pro  ControlBoard.kicad_sch
kf_data_types/: Cargo.toml
kf_data_types/src/: microcontroller_types.rs
kingfisher-uc/: Cargo.toml
kingfisher-uc/.cargo/: config.toml
kingfisher-uc/src/: main.rs
kingfisher_data_types/: Cargo.toml  README.md
kingfisher_data_types/src/: lib.rs  microcontroller_types.rs
kingfisher_nodes/: Cargo.toml
kingfisher_nodes/dashboard/: README.md  package-lock.json  package.json  vite.config.ts
kingfisher_nodes/dashboard/src/: app.html
kingfisher_nodes/dashboard/src-tauri/: Cargo.toml  tauri.conf.json
kingfisher_nodes/dashboard/src-tauri/icons/: icon.icns
kingfisher_nodes/dashboard/src-tauri/src/: dds_topics.rs  lib.rs  main.rs  system_status.rs
kingfisher_nodes/dashboard/src/routes/: +page.svelte
kingfisher_nodes/data_logger/: Cargo.toml  data_logger.toml
kingfisher_nodes/data_logger/src/: main.rs
kingfisher_nodes/gps/: Cargo.toml
kingfisher_nodes/gps/src/: main.rs
kingfisher_nodes/imu_reader/: Cargo.toml
kingfisher_nodes/imu_reader/src/: dds_task.rs  main.rs  serial_task.rs
kingfisher_nodes/kingfisher_data_types/: Cargo.toml
kingfisher_nodes/kingfisher_data_types/src/: dds_topics.rs  lib.rs
kingfisher_nodes/microcontroller/: Cargo.toml
kingfisher_nodes/microcontroller/src/: dds_task.rs  lib.rs  serial_task.rs
kingfisher_nodes/state_monitor/: Cargo.toml  system_status.toml
kingfisher_nodes/state_monitor/src/: main.rs
kingfisher_uc/: Cargo.toml  README.md
kingfisher_uc/.cargo/: config.toml
kingfisher_uc/src/: main.rs  usb_comms.rs
mikro_click_13dof/: Cargo.toml  README.md  rust-toolchain.rs
mikro_click_13dof/.cargo/: config.toml
mikro_click_13dof/src/: imu_types.rs  main.rs
mikro_click_13dof/src/click_driver/: bme680_registers.rs  bmi088_registers.rs  bmm150_registers.rs  click_driver.rs  mod.rs  registers.rs  types.rs
tools/: README.md
tools/udev-rules/: 50-main_controller.rules
uc_backup/: README.md  firmware.hex  hfusefile.hex
