[package]
name = "kingfisher-uc"
version = "0.1.0"
authors = ["Ryan Wicks <ryancwicks@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "kingfisher-uc"

test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
atmega32u4-usb-serial = { git = "https://github.com/ryancwicks/atmega32u4-usb-serial", branch = "update_usb_serial_version" }

[dependencies.avr-device]
version = "0.5.0"
features = ["atmega32u4"]

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4"
features = ["arduino-leonardo"]


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
