[package]
name = "kingfisher_data_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
serde = {version = "1.0.152", features=["derive"]}

[target.'cfg(target_arch = "avr")'.dependencies]
serde = {version = "1.0.152", default-features = false, features=["derive"]}
heapless = {version="0.7.16"}
