[package]
name = "kingfisher_uc"
version = "0.1.0"
authors = ["Ryan Wicks <ryancwicks@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "kingfisher_uc"

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"
avr-device = "0.5.4"
atmega32u4-usb-serial = { git = "https://github.com/ryancwicks/atmega32u4-usb-serial", branch = "update_usb_serial_version" }
serde = { version = "1.0", default-features = false}
postcard = "1.0.4"
heapless = {version="0.7.16", features=["ufmt-impl"]}
kingfisher_data_types = { path="../kingfisher_data_types", default-features = false}


[dependencies.embedded-hal-v0]
version = "0.2.3"
package = "embedded-hal"

# The latest releases of `proc-macro2` do not support the rust toolchain that
# we use.  Thus, we must fix this dependency to an older version where our
# toolchain is still supported.  See https://github.com/Rahix/avr-hal/issues/537
[build-dependencies.proc-macro2]
version = "=1.0.79"


[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["arduino-leonardo"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
