[package]
name = "mikro_click_13dof"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1.0",  features = ["defmt", "stm32f411ce", "unstable-pac", "memory-x", "time-driver-tim4", "exti", "chrono"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-usb = { version = "0.3.0", features=["defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
defmt = "0.3.10"
embassy-futures = "0.1.1"
defmt-rtt = "0.4.1"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
futures-util = { version="0.3.31", default-features=false }
usbd-hid = "0.8.2"
critical-section = "1.2.0"
heapless = "0.8.0"


[patch.crates-io]
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "9a238e6ad8aedf29b5f5af7308c7f5f50061242c" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "9a238e6ad8aedf29b5f5af7308c7f5f50061242c" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "9a238e6ad8aedf29b5f5af7308c7f5f50061242c" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "9a238e6ad8aedf29b5f5af7308c7f5f50061242c" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "9a238e6ad8aedf29b5f5af7308c7f5f50061242c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "9a238e6ad8aedf29b5f5af7308c7f5f50061242c" }


[profile.release]
debug = 2
