[package]
name = "microcontroller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
kingfisher_data_types = { path = "../kingfisher_data_types"}
serialport = "4.2.0"
config = "0.13.3"
postcard = {version = "1.0.4", features = ["alloc"]}
tokio = { version="1.26.0", features=["full"]}
tokio-serial = "5.4.4"
futures = "0.3.26"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio-util = {version = "0.7.7", features = ["codec"]}
bytes = "1.4.0"

