[package]
name = "state_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dust_dds = "0.11.0"
sysinfo = "0.33.0"
kingfisher_data_types = { path = "../kingfisher_data_types"}
log = "0.4.22"
env_logger = "0.11.5"
config = "0.15.3"
clap = { version = "4.5.23", features = ["derive"] }
