[package]
name = "dashboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kingfisher_data_types = { path = "../../kingfisher_data_types"}
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.6"
dust_dds = "0.11.0"
rerun = {version="0.21.0", features= ["web_viewer"] }
re_ws_comms = "0.21.0"

[replace]
"re_arrow2:0.18.0" = { git = "https://github.com/rerun-io/re_arrow2", rev = "4049468314caf5e67410539e0a1b72eb4b8d5b22" }
